--- a/start-hosting/index.html
+++ b/start-hosting/index.html
@@ -6,7 +6,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>uHost Signup</title>
         <link rel="shortcut icon" href="../images/favicon.png">
-        <link href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700" rel="stylesheet">
         <link rel="stylesheet" href="../shared.css">
         <link rel="stylesheet" href="start-hosting.css">
     </head>
@@ -60,14 +59,14 @@
                 <option value="ms">Ms.</option>
             </select>
             <label for="first-name">First name</label>
-            <input type="text" id="first-name">
+            <input type="text" id="first-name" required>
             <label for="last-name">Last name</label>
             <input type="text" id="last-name">
             <label for="email">E-Mail</label>
-            <input type="text" id="email">
+            <input type="text" id="email" required>
             <label for="password">Password</label>
-            <input type="password" id="password">
-            <input type="checkbox" id="agree-terms">
+            <input type="password" id="password" required>
+            <input type="checkbox" id="agree-terms" required>
             <label for="agree-terms">Agree to
                 <a href="#">Terms &amp; Conditions</a>
             </label>
